welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (speed<=60 && isBirthday=false) {
                      ^caughtSpeeding:5: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	else if (speed>60 && speed<=80 && isBirthday=false) {
                                       ^caughtSpeeding:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	else if (speed>80 && isBirthday=false) {
                          ^caughtSpeeding:11: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (speed<=65 && isBirthday=true) {
                      ^caughtSpeeding:14: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	else if (speed>65 && speed<=85 && isBirthday=true) {
                                       ^caughtSpeeding:17: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	else if (speed>85 && isBirthday=true) {
                          ^caughtSpeeding:17: error: type mismatch;
 found   : Unit
 required: Int
	else if (speed>85 && isBirthday=true) {
             ^